KUBE_RESOURCES/PM2_Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  labels:
    app: backend

spec:
  selector:
    app: backend
  ports:
    - port: 6757
      targetPort: 6757
      name: http
