KUBE_RESOURCES/Istio-Fault-Injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-backend
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: prod
    - name: v2
      labels:
        version: canary
---
# WORKS
# Pattern mathcing BS will not work, we will explore timeout, fault injection, circcuit breaker, traffic shifting mirroring
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-param
spec:
  hosts:
  - backend
  http:
    - fault:
        delay:
          fixedDelay: 10s
          percentage:
            value: 100
      match:
        - uri:
            prefix: /prefix
          queryParams:
            class:
              exact: d
      route:
      - destination:
          host: backend
          subset: v1
    - route:
        - destination:
            host: backend
            subset: v2
