KUBE_RESOURCES/Istio-Request-Param.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-backend
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: prod
    - name: v2
      labels:
        version: canary
---
# WORKS
# Pattern mathcing BS will not work, we will explore timeout, fault injection, circcuit breaker, traffic shifting mirroring
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-param
spec:
  hosts:
  - backend
  http:
  - match:
    - uri:
        prefix: /prefix
      queryParams:
        class:
          exact: d
    route:
    - destination:
        host: backend
        subset: v2
  - route:
    - destination:
        host: backend
        subset: v1
