KUBE_RESOURCES/Istio-Retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-backend
spec:
  host: backend
  subsets:
    - name: v1
      labels:
        version: prod
    - name: v2
      labels:
        version: canary
---
# A timeout is the amount of time that an Envoy proxy should wait for replies from a given service,
# Retry is a configuration that an envoy proxy should do to get replies from given service.
# It's not defined as route kind of thing from A->B
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-route
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v2
    retries:
      attempts: 3
      perTryTimeout: 2s
